--- a/help/help.adoc
+++ b/help/help.adoc
@@ -1,7 +1,4 @@
-
 Plugin Version @PLUGIN_VERSION@
-
-
 Revised on December 19, 2018
 
 This plugin was developed and tested against Amazon Simple Storage Service (Amazon S3).
@@ -13,9 +10,9 @@ IMPORTANT: For all parameter descriptions in this document, required parameters 
 
 Plugin configurations are sets of parameters that apply across some or all of the plugin procedures. They reduce repetition of common values, create predefined sets of parameters for end users, and store credentials securely. Each configuration has a unique name that is automatically entered in designated parameters in the procedures.
 
-==== Input
+=== Input
 
-. Go to *Administration* > *Plugins* to open the Plugin Manager.
+. Go to menu:Administration[Plugins] to open the Plugin Manager.
 . Find the EC-S3 row.
 . Click *Configure* to open the EC-S3 Configurations page.
 . Click *Create Configuration*.
@@ -36,9 +33,7 @@ Remember that you may need to create additional configurations later.
 |Debug Level |Provide the debug level for the output: 0=errors only, 1=normal headers and responses, 2+=debugging information included. (Required)
 |===
 
-image::cloudbees-common::cd-plugins/ec-s3/parameters/configuration-panel.png[image]
-
-==== Output
+=== Output
 
 The EC-S3 Configurations page now shows the new configuration.
 
@@ -77,15 +72,11 @@ To ensure a single, consistent naming approach for Amazon S3 buckets across regi
 |Bucket Name |Name of the bucket to create.
 |===
 
-image::cloudbees-common::cd-plugins/ec-s3/parameters/ec-s3-createbucket1.png[image]
-
 ==== Output
 
 After the job runs, you can view the results on the Job Details page in {CD}. Every job step was completed successfully.
 
 In the *CreateBucket* step, click the Log button to see the diagnostic information.
-
-[[CreateFolder]]
 
 
 === CreateFolder
@@ -105,22 +96,17 @@ This procedure create nested folders within the specified bucket. Folders help t
 |Folder Name |Name of the Folder to create. (Required)
 |===
 
-image::cloudbees-common::cd-plugins/ec-s3/parameters/ec-s3-createfolder1.png[image]
-
 ==== Output
 
 After the job runs, you can view the results on the Job Details page in {CD}. Every job step was completed successfully.
 
 In the *CreateFolder* step, click the Log button to see the diagnostic information.
 
-[[DeleteBucketContents]]
-
-
 === DeleteBucketContents
 
 This procedure deletes the contents of the specified bucket.
 
-====== Input
+==== Input
 
 . Go to the *DeleteBucketContents* procedure.
 . Enter the following parameters:
@@ -132,22 +118,17 @@ This procedure deletes the contents of the specified bucket.
 |Bucket Name |Name of the bucketof which to clear the contents. (Required)
 |===
 
-image::cloudbees-common::cd-plugins/ec-s3/parameters/ec-s3-deletebucketcontents1.png[image]
-
-====== Output
+==== Output
 
 After the job runs, you can view the results on the Job Details page in {CD}. Every job step was completed successfully.
 
 In the *DeleteBucketContents* step, click the Log button to see the diagnostic information.
 
-[[DeleteObject]]
-
-
 === DeleteObject
 
 This procedure deletes the S3 object in specified bucket or folder.
 
-====== Input
+==== Input
 
 . Go to the *DeleteObject* procedure.
 . Enter the following parameters:
@@ -160,22 +141,17 @@ This procedure deletes the S3 object in specified bucket or folder.
 |Key |Key of the object to delete. (Required)
 |===
 
-image::cloudbees-common::cd-plugins/ec-s3/parameters/ec-s3-deleteobject1.png[image]
-
-====== Output
+==== Output
 
 After the job runs, you can view the results on the Job Details page in {CD}. Every job step was completed successfully.
 
 In the *DeleteObject* step, click the Log button to see the diagnostic information.
 
-[[DownloadFolder]]
-
-
 === DownloadFolder
 
 This procedure downloads the contents of the specified folder to local filesystem.
 
-====== Input
+==== Input
 
 . Go to the *DownloadFolder* procedure.
 . Enter the following parameters:
@@ -189,9 +165,7 @@ This procedure downloads the contents of the specified folder to local filesyste
 |Download Location |Path of the download location.For example, '/path/to/downloadLocation' or 'C:\path\to\downloadLocation'. (Required)
 |===
 
-image::cloudbees-common::cd-plugins/ec-s3/parameters/ec-s3-downloadfolder1.png[image]
-
-====== Output
+==== Output
 
 After the job runs, you can view the results on the Job Details page in {CD}. Every job step was completed successfully.
 
@@ -199,16 +173,12 @@ In the *DownloadFolder* step, click the Log button to see the diagnostic informa
 
 After the folder is successfully downloaded, {CD} stores the key names and download paths of the objects in the property sheet.(Default location is */myJob/S3Output*.)
 
-image::cloudbees-common::cd-plugins/ec-s3/parameters/ec-s3-downloadfolder2.png[image]
-
-[[DownloadObject]]
-
 
 === DownloadObject
 
 This procedure downloads the S3 object specified by the key to the local file system.
 
-====== Input
+==== Input
 
 . Go to the *DownloadObject* procedure.
 . Enter the following parameters:
@@ -222,9 +192,7 @@ This procedure downloads the S3 object specified by the key to the local file sy
 |Download Location |Path of the download location.For example, '/path/to/downloadLocation' or 'C:\path\to\downloadLocation'. (Required)
 |===
 
-image::cloudbees-common::cd-plugins/ec-s3/parameters/ec-s3-downloadobject1.png[image]
-
-====== Output
+==== Output
 
 After the job runs, you can view the results on the Job Details page in {CD}. Every job step was completed successfully.
 
@@ -232,7 +200,6 @@ In the *DownloadObject* step, click the Log button to see the diagnostic informa
 
 {CD} stores the key names and the download locations of the objects in property sheet.(Default location is */myJob/S3Output*.)
 
-image::cloudbees-common::cd-plugins/ec-s3/parameters/ec-s3-downloadobject2.png[image]
 
 [[ListBucket]]
 
@@ -241,7 +208,7 @@ image::cloudbees-common::cd-plugins/ec-s3/parameters/ec-s3-downloadobject2.png[i
 
 This procedure lists all the buckets.
 
-====== Input
+==== Input
 
 . Go to the *ListBucket* procedure.
 . Enter the following parameters:
@@ -252,17 +219,14 @@ This procedure lists all the buckets.
 |Configuration |The name of the configuration which holds all the connection information. This must reference a valid existing configuration. (Required)
 |===
 
-image::cloudbees-common::cd-plugins/ec-s3/parameters/ec-s3-listbucket1.png[image]
 
-====== Output
+==== Output
 
 After the job runs, you can view the results on the Job Details page in {CD}. Every job step was completed successfully.
 
 In the *ListBucket* step, click the Log button to see the diagnostic information.
 
 {CD} stores the list of buckets in the property sheet (Default location is */myJob/S3Output*) as follows:
-
-image::cloudbees-common::cd-plugins/ec-s3/parameters/ec-s3-listbucket2.png[image]
 
 [[ListFolder]]
 
@@ -271,7 +235,7 @@ image::cloudbees-common::cd-plugins/ec-s3/parameters/ec-s3-listbucket2.png[image
 
 This procedure lists the contents of the folders, either recursively or nonrecursively.
 
-====== Input
+==== Input
 
 . Go to the *ListFolder* procedure.
 . Enter the following parameters:
@@ -285,9 +249,8 @@ This procedure lists the contents of the folders, either recursively or nonrecur
 |List Objects in this folder or Include all sub folders? |If selected, all objects in this folder and all subfolders will be in the list.
 |===
 
-image::cloudbees-common::cd-plugins/ec-s3/parameters/ec-s3-listfolder1.png[image]
 
-====== Output
+==== Output
 
 After the job runs, you can view the results on the Job Details page in {CD}. Every job step was completed successfully.
 
@@ -295,16 +258,11 @@ In the *ListFolder* step, click the Log button to see the diagnostic information
 
 {CD} stores the list of all the objects in the folder in the property sheet.(Default location is */myJob/S3Output*.)
 
-image::cloudbees-common::cd-plugins/ec-s3/parameters/ec-s3-listfolder2.png[image]
-
-[[UploadFolder]]
-
-
 === UploadFolder
 
 This procedure uploads the specified local filesystem folder to the Amazon S3 service.
 
-====== Input
+==== Input
 
 . Go to the *UploadFolder* procedure.
 . Enter the following parameters:
@@ -319,9 +277,7 @@ This procedure uploads the specified local filesystem folder to the Amazon S3 se
 |Make the object public |If selected, the uploaded object will be publicly accessible.
 |===
 
-image::cloudbees-common::cd-plugins/ec-s3/parameters/ec-s3-uploadfolder1.png[image]
-
-====== Output
+==== Output
 
 After the job runs, you can view the results on the Job Details page in {CD}. Every job step was completed successfully.
 
@@ -329,16 +285,12 @@ In the *UploadFolder* step, click the Log button to see the diagnostic informati
 
 After a folder is successfully uploaded, {CD} stores the key names and AWS access URLs for the objects in this folder in the property sheet.(Default location is */myJob/S3Output*.)
 
-image::cloudbees-common::cd-plugins/ec-s3/parameters/ec-s3-uploadfolder2.png[image]
-
-[[UploadObject]]
-
 
 === UploadObject
 
 This procedure uploads the specified local filesystem folder to Amazon S3 service.
 
-====== Input
+==== Input
 
 . Go to the *UploadObject* procedure.
 . Enter the following parameters:
@@ -353,19 +305,13 @@ This procedure uploads the specified local filesystem folder to Amazon S3 servic
 |Make the object public |If checked, the uploaded object will be publicly accessible.
 |===
 
-image::cloudbees-common::cd-plugins/ec-s3/parameters/ec-s3-uploadobject1.png[image]
-
-====== Output
+==== Output
 
 After the job runs, you can view the results on the Job Details page in {CD}. Every job step was completed successfully.
 
 In the *UploadObject* step, click the Log button to see the diagnostic information.
 
 After an object is successfully uploaded, {CD} stores the key name and AWS link to the object in the property sheet.(Default location is */myJob/S3Output*.)
-
-image::cloudbees-common::cd-plugins/ec-s3/parameters/ec-s3-uploadobject2.png[image]
-
-[[WebsiteHosting]]
 
 
 === WebsiteHosting
@@ -374,7 +320,7 @@ You can use Amazon Simple Storage Service (S3) to host a website that uses clien
 
 To host your static website, use this procedure to configure an Amazon S3 bucket for website hosting. It is then available at the region-specific website endpoint of the bucket:_<bucket-name>.s3-website-<AWS-region>.amazonaws.com_
 
-====== Input
+==== Input
 
 . Go to the *WebsiteHosting* procedure.
 . Enter the following parameters:
@@ -389,9 +335,7 @@ To host your static website, use this procedure to configure an Amazon S3 bucket
 |Error Document |Name of the error document.
 |===
 
-image::cloudbees-common::cd-plugins/ec-s3/parameters/ec-s3-websitehosting1.png[image]
-
-====== Output
+==== Output
 
 After the job runs, you can view the results on the Job Details page in {CD}. Every job step was completed successfully.
 
@@ -399,9 +343,6 @@ In the *WebsiteHosting* step, click the Log button to see the diagnostic informa
 
 After the bucket is successfully configured for static website hosting, {CD} stores the bucket name as a key and Amazon S3 website endpoint for your bucket as a value in the property sheet.(Default location is */myJob/S3Output*.)
 
-image::cloudbees-common::cd-plugins/ec-s3/parameters/ec-s3-websitehosting2.png[image]
-
-[[example]]
 == Examples and use cases
 
 === Use case 1: static website hosting
