--- a/help/help.adoc
+++ b/help/help.adoc
@@ -415,7 +415,7 @@ image::cloudbees-common-sda::cd-plugins/ec-s3/use-cases/case-1/website-hosting-l
 
 * Added support for new plugin configuration.
 * Upgraded from Perl 5.8 to Perl 5.32.
-* Starting from this release, a CloudBees CD/RO agent v10.3+ is required to run EC-S3 plugin procedures.
+* Starting with EC-S3 1.2.0, {PRODUCT} agents running v10.3 and later are required to run plugin procedures.
 
 === EC-S3 1.1.4
 
