Update help release notes.

--- a/help/help.adoc
+++ b/help/help.adoc
@@ -413,7 +413,7 @@ image::cloudbees-common-sda::cd-plugins/ec-s3/use-cases/case-1/website-hosting-l
 
 === EC-S3 1.2.0
 
-* Added support for new plugin configuration.
+* Added support for a new plugin configuration.
 * Upgraded from Perl 5.8 to Perl 5.32.
 * Starting with EC-S3 1.2.0, {PRODUCT} agents running v10.3 and later are required to run plugin procedures.
 
