Improve SSL/TLS certificate validation

--- a/help/help.adoc
+++ b/help/help.adoc
@@ -411,6 +411,10 @@ image::cloudbees-common-sda::cd-plugins/ec-s3/use-cases/case-1/website-hosting-l
 [[rns]]
 == Release notes
 
+=== EC-Artifact 1.2.1
+
+* Improved SSL/TLS certificate validation to ensure that when the *Ignore SSL issues* parameter is selected that SSL/TLS validation is properly disabled.
+
 === EC-S3 1.2.0
 
 * Added support for a new plugin configuration.
